<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center|center_vertical"
                android:text="@string/tbs_monitor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|center_horizontal|center_vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="0dp">

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top|left"
                                android:text="@string/tbs_name"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:visibility="visible"
                                tools:visibility="visible" />

                            <EditText
                                android:id="@+id/tbsnameinput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="bottom|left"
                                android:ems="10"
                                android:hint="@string/entername"
                                android:inputType="textPersonName"
                                android:scrollbarSize="6dp"
                                android:text="@string/stationname"
                                android:textSize="16sp" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="0dp">

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top|left"
                                android:text="@string/tbs_pressure"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/tbspressureinput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:ems="10"
                                android:hint="@string/enterpressure"
                                android:inputType="numberDecimal"
                                android:textSize="16sp" />

                        </FrameLayout>
                    </TableRow>

                </TableLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:text="@string/startdate"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/startdateinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/startdate"
                        android:inputType="datetime"
                        android:text="@string/startingdate" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:text="@string/enddate"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enddateinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/enddate"
                        android:inputType="datetime"
                        android:text="@string/endingdate" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="0dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/tbs_id" />

                        <TextView
                            android:id="@+id/tbsidtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/nullstr" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/tbs_reg" />

                        <TextView
                            android:id="@+id/regtypetext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/nullstr" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="0dp">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/tbs_last_update" />

                        <TextView
                            android:id="@+id/lastupdatetext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/nullstr" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/tbs_status" />

                        <TextView
                            android:id="@+id/tbsstatustext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/nullstr" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="0dp">

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/inpressure" />

                        <TextView
                            android:id="@+id/pressureintext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/nullstr" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/Outpressure" />

                        <TextView
                            android:id="@+id/pressureouttext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp"
                            android:text="@string/nullstr" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp">

                <ImageButton
                    android:id="@+id/updatebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/update24x24"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/readbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/download24x24"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/plotbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/plot24x24"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                app:srcCompat="@drawable/sngpl200x200"
                android:contentDescription="@string/todo" />
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>