<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                app:srcCompat="@drawable/sngpl200x200" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="5dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:foregroundGravity="center_vertical|center_horizontal"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/signin"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="5dp"
                            android:paddingTop="0dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:background="@color/black"
                                android:foregroundGravity="center_vertical|center_horizontal"
                                app:srcCompat="@drawable/email" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextTextEmailAddress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="bottom|left"
                                android:ellipsize="none"
                                android:ems="10"
                                android:foregroundGravity="left|bottom"
                                android:gravity="bottom|left"
                                android:hint="@string/emailhint"
                                android:inputType="textEmailAddress"
                                android:textSize="18sp" />
                        </FrameLayout>
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="5dp"
                            android:paddingTop="0dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="0dp">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:background="@color/black"
                                android:foregroundGravity="center_vertical|center_horizontal"
                                app:srcCompat="@drawable/password" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextTextPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="bottom|left"
                                android:ems="10"
                                android:foregroundGravity="left|bottom"
                                android:gravity="bottom|left"
                                android:hint="@string/passhint"
                                android:inputType="textPassword"
                                android:textSize="18sp" />
                        </FrameLayout>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:text="@string/haveaccount"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/loginbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center|center_horizontal"
                        android:text="@string/loginbtn" />
                </FrameLayout>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>